# scraper-soca

./: .env.example  .gitignore  DYNAMIC_BACKOFF_RECOVERY.md  IMPORTACION DATOS WCT.xlsx  README.md  config.py  contratos_sin_filtros.html  contratos_worldclass.xlsx  debug_contract_3613.html  debug_contract_3613_logged_in.html  main.py  pyproject.toml  requirements.txt  scraper.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: .comandos.md.kate-swp  DEVELOPMENT.md  REPORT_STRATEGY_WORLDCLASS.md  SPEC_LOGGING.md  SPEC_SCRAPER.md  comandos.md  optimizacion-3000-registros.md
docs/architecture/: ARCHITECTURE.md
scripts/: explore_site.py
src/worldclass_scraper/: __init__.py  cli.py  config.py  scraper.py
src/worldclass_scraper/modules/: audit.py  auth.py  browser.py  concurrency.py  exporters.py  extractors.py  filters.py  logging.py  progress.py  retry.py  utils.py
tests/: test_audit.py  test_auth.py  test_browser.py  test_concurrency.py  test_env_config.py  test_exporters.py  test_extractors.py  test_filters.py  test_logging.py  test_main_cli.py  test_output_structure.py  test_progress.py  test_requirements.py  test_retry.py  test_timing.py  test_utils.py
