[project]
name = "worldclass-scraper"
version = "0.1.0"
description = "Scraper para extraer contratos de World Class y exportarlos a Excel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "playwright>=1.61.0",
    "python-dotenv>=1.2.2",
]
