[project]
name = "worldclass-scraper"
version = "0.1.0"
description = "Scraper para extraer contratos de World Class y exportarlos a Excel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3,<3.0.4",
    "playwright>=1.61.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
